# python-xbox

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml  readme_example.py  renovate.json
.github/: FUNDING.yml  release-drafter.yml
.github/workflows/: build.yml  documentation.yml  draft.yml  labeler.yml
docs/reference/: account.md  account_models.md  achievements.md  achievements_models.md  catalog.md  catalog_models.md  client.md  cqs.md  cqs_models.md  gameclips.md  gameclips_models.md  language.md  lists.md  lists_models.md  manager.md  mediahub.md  mediahub_models.md  message.md  message_models.md  people.md  people_models.md  presence.md  presence_models.md  profile.md  profile_models.md  pythonxbox.md  screenshots.md  screenshots_models.md  smartglass.md  smartglass_models.md  titlehub.md  titlehub_models.md  usersearch.md  usersearch_models.md  userstats.md  userstats_models.md  xalmanager.md
src/pythonxbox/: __init__.py
src/pythonxbox/api/: client.py  language.py
src/pythonxbox/api/provider/: baseprovider.py  ratelimitedprovider.py
src/pythonxbox/api/provider/account/: __init__.py
src/pythonxbox/api/provider/achievements/: __init__.py  models.py
src/pythonxbox/api/provider/catalog/: __init__.py  const.py  models.py
src/pythonxbox/api/provider/cqs/: __init__.py  models.py
src/pythonxbox/api/provider/gameclips/: __init__.py  models.py
src/pythonxbox/api/provider/lists/: __init__.py  models.py
src/pythonxbox/api/provider/mediahub/: __init__.py  models.py
src/pythonxbox/api/provider/message/: __init__.py  models.py
src/pythonxbox/api/provider/people/: __init__.py  models.py
src/pythonxbox/api/provider/presence/: __init__.py  models.py
src/pythonxbox/api/provider/profile/: __init__.py  models.py
src/pythonxbox/api/provider/screenshots/: __init__.py  models.py
src/pythonxbox/api/provider/smartglass/: __init__.py  models.py
src/pythonxbox/api/provider/titlehub/: __init__.py  models.py
src/pythonxbox/api/provider/usersearch/: __init__.py  models.py
src/pythonxbox/api/provider/userstats/: __init__.py  models.py
src/pythonxbox/authentication/: manager.py  models.py  xal.py
src/pythonxbox/common/: exceptions.py  filetimes.py  models.py  request_signer.py  signed_session.py
src/pythonxbox/common/ratelimits/: __init__.py  models.py
src/pythonxbox/scripts/: __init__.py  authenticate.py  change_gamertag.py  friends.py  search.py  xal.py
tests/: common.py  conftest.py  test_account.py  test_achievements.py  test_auth.py  test_catalog.py  test_cqs.py  test_gameclips.py  test_lists.py  test_mediahub.py  test_message.py  test_people.py  test_presence.py  test_profile.py  test_ratelimits.py  test_request_signer.py  test_screenshots.py  test_signed_session.py  test_smartglass.py  test_titlehub.py  test_usersearch.py  test_userstats.py  test_xal.py  test_xbl_client.py
tests/data/responses/: gameclips_recent_own.json  gameclips_saved_community.json  people_batch.json  people_friends_by_xuid.json  people_friends_own.json  people_profile_by_xuid.json  people_recommendations.json  people_summary_by_xuid.json  people_summary_own.json  presence_activity.json  screenshots_saved_community.json  screenshots_saved_own_titleid.json
xbox/webapi/: __init__.py
xbox/webapi/api/: client.py
xbox/webapi/api/provider/achievements/: __init__.py
xbox/webapi/api/provider/catalog/: __init__.py  const.py  models.py
xbox/webapi/api/provider/cqs/: __init__.py
xbox/webapi/api/provider/gameclips/: __init__.py  models.py
xbox/webapi/api/provider/lists/: __init__.py
xbox/webapi/api/provider/mediahub/: __init__.py
xbox/webapi/api/provider/message/: __init__.py
xbox/webapi/api/provider/people/: __init__.py  models.py
xbox/webapi/api/provider/presence/: __init__.py
xbox/webapi/api/provider/profile/: __init__.py
xbox/webapi/api/provider/screenshots/: __init__.py  models.py
xbox/webapi/api/provider/smartglass/: __init__.py
xbox/webapi/api/provider/titlehub/: __init__.py  models.py
xbox/webapi/api/provider/usersearch/: __init__.py
xbox/webapi/api/provider/userstats/: __init__.py
xbox/webapi/authentication/: manager.py  models.py  xal.py
xbox/webapi/common/: exceptions.py  filetimes.py  request_signer.py  signed_session.py
xbox/webapi/scripts/: authenticate.py  change_gamertag.py  friends.py  search.py  xal.py
