[project]
name = "xbox-webapi"
description = "A library to authenticate with Windows Live/Xbox Live and use their API"
authors = [
    {name = "OpenXbox"},
]
dependencies = [
    "appdirs",
    "ecdsa",
    "httpx",
    "ms_cv",
    "pydantic==2.*",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "GPL"}
keywords = ["xbox one live api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/OpenXbox/xbox-webapi-python"

[project.optional-dependencies]
dev = [
# Tagging releases
    "bump2version",
# Testing
    "coverage",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-runner",
    "respx",
# Packaging
    "twine",
    "watchdog",
    "wheel",
# Pre-commit / Linting
    "ruff==0.1.6",
    "pre-commit==3.5.0",
    "pyupgrade==3.15.0",
    "black==23.11.0",
#   "flake8-docstrings==1.5.0",
    "pydocstyle==6.1.1",
    "bandit==1.7.5",
    "isort==5.12.0",
]
docs = [
    "Sphinx",
    "sphinx-mdinclude",
    "sphinx_rtd_theme",
]

[project.scripts]
xbox-authenticate = "xbox.webapi.scripts.authenticate:main"
xbox-change-gt = "xbox.webapi.scripts.change_gamertag:main"
xbox-friends = "xbox.webapi.scripts.friends:main"
xbox-searchlive = "xbox.webapi.scripts.search:main"
xbox-xal = "xbox.webapi.scripts.xal:main"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "docs",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.8
target-version = "py38"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.bandit]
exclude_dirs = ["tests"]
tests = [
  "B108",
  "B306",
  "B307",
  "B313",
  "B314",
  "B315",
  "B316",
  "B317",
  "B318",
  "B319",
  "B320",
  "B602",
  "B604"
]

[tool.black]
target-version = ["py37", "py38", "py39", "py310", "py311"]
exclude = 'generated'

[tool.hatch.version]
source = "regex_commit"
commit_extra_args = ["-e"]
path = "xbox/webapi/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/xbox/webapi",
]
[tool.hatch.build.targets.wheel]
packages = ["xbox/webapi"]

[tool.hatch.envs.default]
python = "3.13"
dependencies = [
    "appdirs==1.4.4",
    "ecdsa==0.19.1",
    "httpx==0.28.1",
    "ms_cv==0.1.1",
    "pydantic==2.12.3",
]

[tool.hatch.envs.hatch-test]
parallel = true
extra-dependencies = [
  "pytest-cov~=6.2",
  "pytest-asyncio~=1.1",
  "respx~=0.22"
]
extra-args = ["--cov=xbox/webapi/", "--cov-report=term-missing", "--cov-report=xml", "-vv"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["xbox/webapi"]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.14", "3.13", "3.12", "3.11"]

[tool.hatch.envs.hatch-static-analysis]
dependencies = [
    "ruff==0.14.0",
]
config-path = "none"

[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"
